@@ -59,6 +59,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #19555: Restore sysconfig.get_config_var('SO'), with a
+  DeprecationWarning pointing people at $EXT_SUFFIX.
+
 - Issue #8813: Add SSLContext.verify_flags to change the verification flags
   of the context in order to enable certification revocation list (CRL)
   checks or strict X509 rules.
